--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,15 @@
   <welcome-file-list>
     <welcome-file>rechercheProduitControleur</welcome-file>
   </welcome-file-list>
+
+  <login-config>
+    <auth-method>FORM</auth-method>
+    <realm-name>fakazon</realm-name>
+    <form-login-config>
+      <form-login-page>/login.jsp</form-login-page>
+      <form-error-page>/error.jsp</form-error-page>
+    </form-login-config>
+  </login-config>
  
   <jsp-config>
     <jsp-property-group>
